QE-2 Fix spacing and formatting issues

--- a/wp-content/themes/quarkexpeditions/src/front-end/global/typography.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/global/typography.scss
@@ -100,7 +100,6 @@ p > iframe {
 	@extend %body-small;
 
 	&--bold {
-		font-size: 14px;
 		font-weight: var(--font-weight-bold);
 	}
 }
